--- a/views/user/payment.ejs
+++ b/views/user/payment.ejs
@@ -213,11 +213,11 @@
                                 </svg>
                                 <h3 class="font-semibold text-lg"> Wallet</h3>
                             </div>
-                            <p class="text-sm text-gray-600">Pay using Paytm, PhonePe, Google Pay, or other wallets</p>
+                            <p class="text-sm text-gray-600">Pay using wallet</p>
+                            <p class="text-yellow   -600 text-sm mt-1">Available Balance: ₹<%= walletBalance.toFixed(2) %>
+                            </p>
                         </div>
                     </div>
-                    <p class="text-gray-600 text-sm mt-1">Available Balance: ₹<%= walletBalance.toFixed(2) %>
-                    </p>
 
                 </button>
             </div>
